--- a/analysis/PFA_runout.qmd
+++ b/analysis/PFA_runout.qmd
@@ -200,6 +200,8 @@ runData <- as.data.frame(runout)
 summary(runData)
 # exclude site
 runData <- subset(runData, select = -site)
+runData <- subset(runData, select = -Accum_km2)
+runData <- subset(runData, select = -Length_m)
 run <- as_task_classif(runData,
                        target = "Track_Type",
                        id = "tracks")
