--- a/analysis/PFA_runout_DOGAMI.qmd
+++ b/analysis/PFA_runout_DOGAMI.qmd
@@ -264,7 +264,7 @@ The $P_{DF}$ and $P_T$ values are proportional to the spatial density of debris-
 
 As described earlier, the magnitude of the modeled probability is problematic. It depends on the number of debris-flow tracks included in the inventory. Likewise, the distribution of channel lengths as a function of modeled probability will vary from sub-basin to sub-basin, depending on the distribution of topographic attributes unique to each sub-basin. As described by Burnett and Miller [-@burnett2007], use of proportions effectively normalizes these differences so that results can be compared directly between sites. The cumulative distribution shows how the proportion of channel length is distributed across the range of modeled probability values. Rather than mapping probability, we can map channels in terms of the proportion of expected debris-flow-traversed length. This is illustrated with the black lines and arrows in @fig-TravPropGraph; each increment includes 20% of the modeled channel length.
 
-![Proportion of channel length as a function of modeled traversal probability.](images/PropCurves.png){#fig-TravPropGraph alt="Proportion of channel length as a function of modeled traversal probability." fig-align="center" width="6in"}
+![Proportion of channel length as a function of modeled traversal probability.](images/PropCurves.png){#fig-TravPropGraph fig-align="center" width="6in"}
 
 These values can be mapped back to the traced flow paths. The flow paths can then be parsed into segments containing a specified proportion of the total track length, ordered from lowest probability to highest (or visa versa), as shown in @fig-TravPropMap below. This is the methodology used to identify the "Debris-flow traversal area" and "Designated debris-flow traversal areas" defined for the PFA [@odf2022, pages 30-31].
 
