--- a/analysis/references.bib
+++ b/analysis/references.bib
@@ -1543,3 +1543,27 @@
 	url = {http://dx.doi.org/10.5194/esurf-5-21-2017},
 	langid = {en}
 }
+
+@book{reid_dunne1996,
+    author = {Reid, Leslie M. and Dunne, Thomas},
+	title = {Rapid Evaluation of Sediment Budgets},
+	publisher = {Catena Verlag},
+	address = {Reiskirchen, Germany},
+	year = {1996}
+}
+
+
+@article{brardinoni2003a,
+	title = {Landslide inventory in a rugged forested watershed: a comparison between air-photo and field survey data},
+	author = {Brardinoni, Francesco and Slaymaker, Olav and Hassan, Marwan A},
+	year = {2003},
+	month = {09},
+	date = {2003-09},
+	journal = {Geomorphology},
+	pages = {179--196},
+	volume = {54},
+	number = {3-4},
+	doi = {10.1016/s0169-555x(02)00355-0},
+	url = {http://dx.doi.org/10.1016/S0169-555X(02)00355-0},
+	langid = {en}
+}
